some hipster ipsum for you sir

--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,5 @@
 <img src="https://i.cloudup.com/OPTKt5svqO-3000x3000.png" alt="ascii coffee" />
 
 <p>Welcome to coffee.</p>
+
+<p>Put a bird on it drinking vinegar locavore, fashion axe fanny pack Austin Williamsburg aesthetic Truffaut selvage 3 wolf moon hella Wes Anderson. Meggings mixtape fingerstache tousled cred twee. VHS irony lo-fi plaid, keffiyeh chillwave Thundercats tattooed American Apparel single-origin coffee Cosby sweater sriracha. Chillwave single-origin coffee gluten-free, YOLO PBR&B meh fixie whatever organic Schlitz pop-up. Stumptown Williamsburg scenester artisan vinyl, ethnic Intelligentsia plaid pug messenger bag bitters Pinterest retro. Leggings typewriter twee, Portland food truck single-origin coffee kitsch Marfa. Swag literally semiotics Shoreditch gentrify plaid sriracha cliche.</p>
